<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">异物侵限</string>
    <string name="app_name_all">铁路工务异物侵限</string>

    <string name="action_settings">Settings</string>
    <string name="ip_addr">ip&#160;地址:</string>
    <string name="mao_hao">:</string>
    <string name="username">用户名:</string>
    <string name="password">&#160;密&#160;&#160;&#160;码:</string>
    <string name="hint_ip_addr">服务器地址</string>
    <string name="hint_port">端口号</string>
    <string name="hint_username">用户名</string>
    <string name="hint_pwd">密码</string><!-- 密码 • ● -->
    <string name="login">登录</string>
    <string name="save_pwd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="company_name">保定市天河电子技术有限公司</string>
    <string name="monitor">监控</string>

    <string name="video_layout_loading">Loading...</string>
    <string name="prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="dismiss">隐藏</string>

    <string name="update_version_info">升级包版本信息</string>
    <string name="monitor_name">监控点&#058;&#160;</string>
    <string name="sid_name">Sid&#058;&#160;&#160;</string>
    <string name="type_name">类型&#058;&#160;&#160;&#160;</string>
    <string name="unit_no">单元号&#058;&#160;</string>
    <string name="update_info">版本信息&#058;</string>

    <string name="look_video">&#160;&#160;&#160;&#160;查看视频：</string>

    <string name="open_true">已\n开\n通</string>
    <string name="open_false">未\n开\n通</string>

    <string name="stop_preview">停止预览</string>
    <string name="start_preview">开始预览</string>


</resources>