<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_tv_5dp"
    android:layout_marginLeft="@dimen/margin_tv_10dp"
    android:layout_marginRight="@dimen/margin_tv_10dp"
    android:layout_marginTop="@dimen/margin_tv_5dp"
    app:cardCornerRadius="@dimen/margin_tv_10dp"
    app:elevation="@dimen/margin_tv_5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/update_index"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="@dimen/margin_tv_5dp"
            android:background="@drawable/bg_circle_blue"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:paddingRight="@dimen/margin_tv_15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tv_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_tv_10dp"
                    android:text="@string/monitor_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_14sp"
                    android:id="@+id/textView2" />

                <TextView
                    android:id="@+id/monitor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="@dimen/margin_tv_10dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tv_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_tv_10dp"
                    android:text="@string/sid_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_14sp" />

                <TextView
                    android:id="@+id/unit_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="@dimen/margin_tv_20dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tv_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_tv_10dp"
                    android:text="@string/type_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_14sp" />

                <TextView
                    android:id="@+id/type_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="@dimen/margin_tv_20dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_tv_10dp"
                android:layout_marginTop="@dimen/margin_tv_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_tv_10dp"
                    android:text="@string/update_info"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_14sp" />

                <TextView
                    android:id="@+id/update_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="@dimen/margin_tv_20dp"
                    android:text=""
                    android:textColor="@color/blue"
                    android:textSize="@dimen/txt_14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>